<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cnr_param</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="nicola.pedrocchi@stiima.cnr.it">feynman</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>
  <buildtool_depend condition="$ROS_VERSION != 2">cmake</buildtool_depend>
  
  <build_depend>yaml-cpp</build_depend>
  <build_depend>boost</build_depend>
  <build_depend>eigen</build_depend>
  <!--build_depend>cnr_yaml</build_depend-->
  <exec_depend condition="$ROS_VERSION == 1">cnr_yaml</exec_depend>
  
  <depend condition="$ROS_VERSION == 1">roscpp</depend>
  <depend condition="$ROS_VERSION == 2">rclcpp</depend>

  <test_depend>gcovr</test_depend>
  <test_depend>lcov</test_depend>
  <test_depend>gtest</test_depend>
  <test_dependd>python3-lxml</build_depend>
  
  <export>
    <build_type condition="$ROS_VERSION != 1">cmake</build_type>
  </export>

</package>
